--- a/app/index.html
+++ b/app/index.html
@@ -157,8 +157,9 @@
                   </div>
                 </div>
 
-                <a class="header__btn header__btn-login header__btn-login--off" href="">Login</a>
-                <a class="header__btn header__btn-logout header__btn-login--on" href="">Logout</a>
+                <a class="header__btn header__btn-login header__btn-login--on" data-fancybox data-src="#modal"
+                  href="javascript:;">Login</a>
+                <a class="header__btn header__btn-logout header__btn-login--off" href="">Logout</a>
                 <a class="header__btn header__btn-register header__btn-login--off" href="">Register</a>
 
               </div>
@@ -1088,6 +1089,25 @@
         </div>
       </div>
     </footer>
+  </div>
+
+  <div id="modal">
+    <div class="login__wrapper">
+      <div class="login__title">
+        Login
+      </div>
+      <form>
+        <label class="login__label-name">
+          <input type="text" placeholder="Name" required>
+        </label>
+        <label class="login__label-pass">
+          <input type="password" placeholder="Password" required>
+        </label>
+        <button type="submit">Submit</button>
+        <a class="create-acc" href="#">Creat An Account?</a>
+        <a class="lost-pass" href="#">Lost Password?</a>
+      </form>
+    </div>
   </div>
 
 
