added settings page

--- a/app/product-one.html
+++ b/app/product-one.html
@@ -296,7 +296,7 @@
                   <span class="tab" data-id="3">Reviews</span>
                   <span class="tab" data-id="4">Support</span>
                 </div>
-                <div class="tab_content">
+                <div class="tab__content">
                   <div class="tab-item active-tab" id="1">
                     <ul class="tab__items-list">
                       <li class="angle-right">Printing and typesetting industry</li>
