--- a/app/404.html
+++ b/app/404.html
@@ -164,12 +164,19 @@
                 <a class="header__btn header__btn-register header__btn-login--off" href="">Register</a>
 
               </div>
+
+              <div class="header__btn-menu icon-user"></div>
             </div>
           </div>
 
           <div class="header__menu">
             <div class="container">
               <nav class="menu">
+                <div class="menu__btn">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
                 <ul class="menu__list">
                   <li>
                     <a href="#">
@@ -282,7 +289,7 @@
         <div class="container">
           <div class="footer__inner">
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-adress">
               <div class="footer__col-title">About Company</div>
               <div class="footer__col-text">
                 Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna
@@ -314,7 +321,7 @@
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col-social">
               <div class="footer__col-title">Follow Us On</div>
               <ul class="footer__social-link">
                 <li><a class="link-facebook" href="#"></a></li>
