--- a/app/settings.html
+++ b/app/settings.html
@@ -164,12 +164,19 @@
                 <a class="header__btn header__btn-register header__btn-login--off" href="">Register</a>
 
               </div>
+
+              <div class="header__btn-menu icon-user"></div>
             </div>
           </div>
 
           <div class="header__menu">
             <div class="container">
               <nav class="menu">
+                <div class="menu__btn">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
                 <ul class="menu__list">
                   <li>
                     <a href="#">
@@ -314,19 +321,209 @@
                         <label>Zip / Postal Code</label>
                         <input type="text">
                       </div>
-
                     </form>
                   </div>
                 </div>
               </div>
               <div class="tab-item" id="2">
-
+                <div class="page-box">
+                  <div class="page-box__title">
+                    Personal Information
+                  </div>
+                  <div class="page-box__content">
+                    <form>
+                      <div class="settings__line">
+                        <label>First Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Last Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Company Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Country</label>
+                        <select>
+                          <option>Select Your Country</option>
+                          <option>Select Your Country</option>
+                        </select>
+                      </div>
+                      <div class="settings__line">
+                        <label>Address Line 1</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Address Line 2</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>City</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>State / Province / Region</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Zip / Postal Code</label>
+                        <input type="text">
+                      </div>
+                    </form>
+                  </div>
+                </div>
               </div>
               <div class="tab-item" id="3">
-
+                <div class="page-box">
+                  <div class="page-box__title">
+                    Personal Information
+                  </div>
+                  <div class="page-box__content">
+                    <form>
+                      <div class="settings__line">
+                        <label>First Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Last Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Company Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Country</label>
+                        <select>
+                          <option>Select Your Country</option>
+                          <option>Select Your Country</option>
+                        </select>
+                      </div>
+                      <div class="settings__line">
+                        <label>Address Line 1</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Address Line 2</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>City</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>State / Province / Region</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Zip / Postal Code</label>
+                        <input type="text">
+                      </div>
+                    </form>
+                  </div>
+                </div>
               </div>
               <div class="tab-item" id="4">
-
+                <div class="page-box">
+                  <div class="page-box__title">
+                    Personal Information
+                  </div>
+                  <div class="page-box__content">
+                    <form>
+                      <div class="settings__line">
+                        <label>First Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Last Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Company Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Country</label>
+                        <select>
+                          <option>Select Your Country</option>
+                          <option>Select Your Country</option>
+                        </select>
+                      </div>
+                      <div class="settings__line">
+                        <label>Address Line 1</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Address Line 2</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>City</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>State / Province / Region</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Zip / Postal Code</label>
+                        <input type="text">
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-item" id="5">
+                <div class="page-box">
+                  <div class="page-box__title">
+                    Personal Information
+                  </div>
+                  <div class="page-box__content">
+                    <form>
+                      <div class="settings__line">
+                        <label>First Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Last Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Company Name</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Country</label>
+                        <select>
+                          <option>Select Your Country</option>
+                          <option>Select Your Country</option>
+                        </select>
+                      </div>
+                      <div class="settings__line">
+                        <label>Address Line 1</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Address Line 2</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>City</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>State / Province / Region</label>
+                        <input type="text">
+                      </div>
+                      <div class="settings__line">
+                        <label>Zip / Postal Code</label>
+                        <input type="text">
+                      </div>
+                    </form>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -340,7 +537,7 @@
         <div class="container">
           <div class="footer__inner">
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-adress">
               <div class="footer__col-title">About Company</div>
               <div class="footer__col-text">
                 Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna
@@ -372,7 +569,7 @@
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col-social">
               <div class="footer__col-title">Follow Us On</div>
               <ul class="footer__social-link">
                 <li><a class="link-facebook" href="#"></a></li>
