--- a/app/upload.html
+++ b/app/upload.html
@@ -257,60 +257,77 @@
           <div class="breadcrumbs__inner">
             <ul class="breadcrumbs__list">
               <li><a href="#">Home</a></li>
-              <li><span>Contact Us</span></li>
+              <li><span>Upload Product</span></li>
             </ul>
           </div>
         </div>
       </div>
 
-      <section class="contact">
+      <section class="upload">
         <div class="container">
-          <div class="contact__wrapper">
-            <div class="contact__head">
-              Contact With Us
-            </div>
+          <form>
+            <div class="upload__inner">
+              <div class="upload__inner-title">Upload Your item</div>
 
-            <div class="contact__inner">
-              <div class="contact__map">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d386781.73428393813!2d-73.56360693756514!3d40.76791227906446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2z0J3RjNGOLdCZ0L7RgNC6LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1598953497351!5m2!1sru!2sru"
-                  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+              <div class="upload__inner-content">
+                <div class="upload-line">
+                  <label>Select Categories <span>*</span></label>
+                  <select>
+                    <option>Select</option>
+                    <option>Select</option>
+                    <option>Select</option>
+                    <option>Select</option>
+                  </select>
+                </div>
+                <div class="upload-line">
+                  <label>Product Name <span>*</span></label>
+                  <input type="text" placeholder="Enter your product name here ..." required>
+                </div>
+                <div class="upload-line">
+                  <label>Product Description <span>*</span></label>
+                  <textarea placeholder="<h1> Type your text  here </h1/>" required></textarea>
+                </div>
+                <div class="upload-line">
+                  <label>Upload Main File <span>*</span></label>
+                  <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File">
+                </div>
+                <div class="upload-line">
+                  <label>Upload Screenshots <span>*</span></label>
+                  <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File">
+                </div>
+                <div class="upload-line">
+                  <label>File Included <span>*</span></label>
+                  <select>
+                    <option>Select File Type</option>
+                    <option>Select File Type</option>
+                    <option>Select File Type</option>
+                    <option>Select File Type</option>
+                  </select>
+                </div>
+                <div class="upload-line">
+                  <label>File Dimensions <span>*</span></label>
+                  <input type="text" placeholder="Enter the item  dimentionss here ..." required>
+                </div>
+                <div class="upload-line">
+                  <label>Item Tags <span>*</span></label>
+                  <input type="text" placeholder="Enter Tag Here" required>
+                </div>
               </div>
-              <div class="contact__box">
-                <div class="contact__info">
-                  <div class="contact__info-item">
-                    <div class="contact__info-title icon-map-marker">Our Office Address</div>
-                    <div class="contact__info-content">
-                      PO Box 16122 Collins Street West
-                      Victoria 8007 Australia
-                    </div>
-                  </div>
-                  <div class="contact__info-item">
-                    <div class="contact__info-title icon-phone">Phone</div>
-                    <a href="tel:61383766284" class="contact__info-content">+61 3 8376 6284</a>
-                  </div>
-                  <div class="contact__info-item">
-                    <div class="contact__info-title icon-envelope-o">E-mail</div>
-                    <div class="contact__info-content">info@foxtar.com</div>
-                  </div>
+
+              <div class="upload__inner-title">Set Your Price (US$)</div>
+              <div class="upload__inner-content">
+                <div class="upload-line">
+                  <label>Regular License <span>*</span></label>
+                  <input type="text" placeholder="$00.00" required>
                 </div>
-                <div class="contact__form">
-                  <div class="contact__form-title">
-                    Drop Us A Message
-                  </div>
-                  <form>
-                    <div class="contact__form-row">
-                      <input type="text" placeholder="Name*" required>
-                      <input type="text" placeholder="E-mail*" required>
-                    </div>
-                    <textarea placeholder="Message*" required></textarea>
-                    <button type="submit">Send Message</button>
-                  </form>
+                <div class="upload-line">
+                  <label>Extended License <span>*</span></label>
+                  <input type="text" placeholder="$00.00" required>
                 </div>
+                <button type="submit">Submit</button>
               </div>
             </div>
-
-          </div>
+          </form>
         </div>
       </section>
 
