--- a/app/withdrawals.html
+++ b/app/withdrawals.html
@@ -164,12 +164,19 @@
                 <a class="header__btn header__btn-register header__btn-login--off" href="">Register</a>
 
               </div>
+
+              <div class="header__btn-menu icon-user"></div>
             </div>
           </div>
 
           <div class="header__menu">
             <div class="container">
               <nav class="menu">
+                <div class="menu__btn">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
                 <ul class="menu__list">
                   <li>
                     <a href="#">
@@ -250,11 +257,105 @@
           <div class="breadcrumbs__inner">
             <ul class="breadcrumbs__list">
               <li><a href="#">Home</a></li>
-              <li><span>Contact Us</span></li>
+              <li><span>Withdrawals</span></li>
             </ul>
           </div>
         </div>
       </div>
+
+      <section class="withdrawals">
+        <div class="container">
+          <div class="withdrawals__inner">
+            <div class="withdrawals__col">
+              <div class="withdrawals__box">
+                <div class="withdrawals__title">
+                  Withdrawals Earnings
+                </div>
+                <div class="withdrawals__content">
+                  <form>
+                    <div class="withdrawals__form-line">
+                      <label>Amount to Withdraw ($2000.00 Maximum) <span>*</span></label>
+                      <input type="text" placeholder="Enter the amount you want to withdraw..." required>
+                    </div>
+                    <div class="withdrawals__form-line">
+                      <label>Choose your Withdraw Method <span>*</span></label>
+                      <select>
+                        <option>Select Your Card</option>
+                        <option>Select Your Card</option>
+                      </select>
+                    </div>
+                    <div class="withdrawals__form-line">
+                      <label>Your Account Name <span>*</span></label>
+                      <select>
+                        <option>Select Your Card</option>
+                        <option>Select Your Card</option>
+                      </select>
+                    </div>
+                    <div class="withdrawals__form-line">
+                      <label>Confirm Your Password <span>*</span></label>
+                      <input type="text" placeholder="Select Your Card" required>
+                    </div>
+                    <button type="submit">Request Withdrawal</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+            <div class="withdrawals__col">
+              <div class="withdrawals__box">
+                <div class="withdrawals__title">
+                  Withdrawal History
+                </div>
+                <div class="withdrawals__content">
+                  <div class="withdrawals__content-items">
+                    <div class="withdrawals__content-item">
+                      <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                      <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                      <div class="withdrawals__content-price">$200</div>
+                      <div class="withdrawals__content-status withdrawals__content-pending">Pending</div>
+                    </div>
+                    <div class="withdrawals__content-item">
+                      <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                      <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                      <div class="withdrawals__content-price">$100</div>
+                      <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                    </div>
+                    <div class="withdrawals__content-item">
+                      <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                      <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                      <div class="withdrawals__content-price">$200</div>
+                      <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                    </div>
+                    <div class="withdrawals__content-item">
+                      <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                      <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                      <div class="withdrawals__content-price">$100</div>
+                      <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                    </div>
+                    <div class="withdrawals__content-item">
+                      <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                      <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                      <div class="withdrawals__content-price">$200</div>
+                      <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                    </div>
+                    <div class="withdrawals__content-item">
+                      <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                      <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                      <div class="withdrawals__content-price">$100</div>
+                      <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                    </div>
+                    <div class="withdrawals__content-item">
+                      <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                      <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                      <div class="withdrawals__content-price">$200</div>
+                      <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
     </div>
 
@@ -263,7 +364,7 @@
         <div class="container">
           <div class="footer__inner">
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-adress">
               <div class="footer__col-title">About Company</div>
               <div class="footer__col-text">
                 Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna
@@ -295,7 +396,7 @@
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col-social">
               <div class="footer__col-title">Follow Us On</div>
               <ul class="footer__social-link">
                 <li><a class="link-facebook" href="#"></a></li>
